--- a/ng2-app/src/app/header/header.component.html
+++ b/ng2-app/src/app/header/header.component.html
@@ -1,20 +1,22 @@
 <header>
-    <nav class="navbar navbar-expand-md fixed-top bg-white border-bottom shadow-sm">
+    <nav class="navbar navbar-expand-md bg-white border-bottom shadow-sm">
       <a class="navbar-brand" href="#">WDM</a>
-  
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#one">one</a>
-            <a class="dropdown-item" href="#two">two</a>
-            <div role="separator" class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#three">three</a>
-          </div>
-        </li>
-        </ul>
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" data-toggle="dropdown">
+              UserName            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+              <a class="dropdown-item" href="#"><i class="align-middle mr-1" data-feather="user"></i> Profile</a>
+              <a class="dropdown-item" href="#"><i class="align-middle mr-1" data-feather="pie-chart"></i> Analytics</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Settings & Privacy</a>
+              <a class="dropdown-item" href="#">Help</a>
+              <a class="dropdown-item" href="#">Sign out</a>
+            </div>
+          </li>
+</ul>
   
       </nav>
       </header>
   
-      
+ 
