--- a/ng2-app/src/app/app.component.css
+++ b/ng2-app/src/app/app.component.css
@@ -1,7 +1,6 @@
 .bg-primary i {
     font-size: 15px;
 }
-.ng-sidebar-bg{
-    background: #dddddd;
-    padding: 10px;
+.bg-primary a{
+    cursor: pointer;
 }
