--- a/ng2-app/src/app/app.component.html
+++ b/ng2-app/src/app/app.component.html
@@ -1,24 +1,15 @@
 <app-header></app-header>
-
 <ng-sidebar-container style = "height: 100vh">
-
     <ng-sidebar [(opened)]="_opened" mode = "push" >
-        <div class="ng-sidebar-bg">
-         <p> this is in sidebar</p>
-         <a closeSidebar>Closes the sidebar</a>
-         <p> this is in sidebar</p>
-        </div>
+          <app-left-menu> </app-left-menu>
     </ng-sidebar>
-
-   <div ng-sidebar-content>
-     
-      <header class="bg-primary text-white p-2"> 
-          <button class="mb-0" (click)="_toggleSidebar()"><i class="fas fa-bars"></i></button>
-            <span>Heading</span>
-      </header>
-   
-   <section class="p-3">
-        <form>
+<div ng-sidebar-content>
+        <header class="bg-primary text-white p-2"> 
+         <a class="mb-0" (click)="_toggleSidebar()"><i class="fas fa-bars"></i></a>
+         <span class="pl-2">Heading</span>
+        </header>
+         <section class="p-3">
+             <form>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Email address</label>
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
@@ -34,9 +25,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
-   </section>
-   
-    </div>
+             </section>
+</div>
 </ng-sidebar-container>
-
 <app-footer></app-footer>
